syntax = "proto3";

package api.petclinic;

import "validate/validate.proto";
import "common/page.proto";

option go_package = "github.com/wastill/petclinic/api_proto/petclinic;petclinic";
option java_multiple_files = true;
option java_package = "api.petclinic";



message CreateOwnerRequest {
	int32 pet_id = 2 [(validate.rules).int64 = {gt: 0}];

	string first_name = 3[(validate.rules).string = {min_len: 1, max_len: 30}]; // the first_name of string must be between 1 and 30 character

	string last_name = 4[(validate.rules).string = {min_len: 1, max_len: 30}]; // the last_name of string must be between 1 and 30 character

	string address = 5[(validate.rules).string = {min_len: 1, max_len: 255}]; // the address of string must be between 1 and 255 character

	string city = 6[(validate.rules).string = {min_len: 1, max_len: 80}]; // the city of string must be between 1 and 80 character

	string telephone = 7[(validate.rules).string = {min_len: 1, max_len: 20}]; // the telephone of string must be between 1 and 20 character

}
message CreateOwnerReply {
	Owner owner = 1;
}

message UpdateOwnerRequest {
	int32 id = 1[(validate.rules).int64 = {gt: 0}];

	string first_name = 3[(validate.rules).string = {min_len: 1, max_len: 30}]; // the first_name of string must be between 1 and 30 character

	string last_name = 4[(validate.rules).string = {min_len: 1, max_len: 30}]; // the last_name of string must be between 1 and 30 character

	string address = 5[(validate.rules).string = {min_len: 1, max_len: 255}]; // the address of string must be between 1 and 255 character

	string city = 6[(validate.rules).string = {min_len: 1, max_len: 80}]; // the city of string must be between 1 and 80 character

	string telephone = 7[(validate.rules).string = {min_len: 1, max_len: 20}]; // the telephone of string must be between 1 and 20 character

}

message UpdateOwnerReply {
	Owner owner = 1;
}

message DeleteOwnerRequest {
	int32 id = 1;
}
message DeleteOwnerReply {
	int32 row_effect = 1;
}

message GetOwnerRequest {
	int32 id = 1;
}
message GetOwnerReply {
	Owner owner = 1;
}

message ListOwnerRequest {
	int32 page_num = 1;
	int32 page_size = 2;
}

message ListOwnerReply {
	common.Page page = 1;
	repeated Owner data = 2;
}



message Owner {

	int32 id = 1;

	int32 pet_id = 2;

	string first_name = 3;

	string last_name = 4;

	string address = 5;

	string city = 6;

	string telephone = 7;
}