package service

import (
	"context"
	pb "github.com/wastill/petclinic/api/petclinic"
)

func (s *PetClinicServiceService) CreateOwner(ctx context.Context, req *pb.CreateOwnerRequest) (*pb.CreateOwnerReply, error) {
	return &pb.CreateOwnerReply{}, nil
}
func (s *PetClinicServiceService) UpdateOwner(ctx context.Context, req *pb.UpdateOwnerRequest) (*pb.UpdateOwnerReply, error) {
	return &pb.UpdateOwnerReply{}, nil
}
func (s *PetClinicServiceService) DeleteOwner(ctx context.Context, req *pb.DeleteOwnerRequest) (*pb.DeleteOwnerReply, error) {
	return &pb.DeleteOwnerReply{}, nil
}
func (s *PetClinicServiceService) GetOwner(ctx context.Context, req *pb.GetOwnerRequest) (*pb.GetOwnerReply, error) {
	return &pb.GetOwnerReply{}, nil
}
func (s *PetClinicServiceService) ListOwner(ctx context.Context, req *pb.ListOwnerRequest) (*pb.ListOwnerReply, error) {
	return &pb.ListOwnerReply{}, nil
}
